jenkins-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31000
  selector:
    app: jenkins
