jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "jenkins-ingress"
  namespace: "jenkins-cb"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: simple-web
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "jenkins-nodeport"
              servicePort: 8080
